--- a/product_lists.html
+++ b/product_lists.html
@@ -48,24 +48,6 @@
                                    " - $" + $( "#slider-range" ).slider( "values", 1 ) );
             } );
         </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
  
     </head>
     <body>
@@ -83,13 +65,13 @@
 
                     <div class="col-md-3 col-sm-3 col-xs-8">
                         <div class="logo">
-                           <!--  <a href="index.html"><img src="images/logo.jpg" alt="Logo" class="img-responsive" /></a> -->
+                            <a href="index.html"><img src="images/logo.jpg" alt="Logo" class="img-responsive" /></a>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-9">
                         <div class="top_header text-right hide_mobile">
                             <a href="/phone.html">Customer care : <span class="ph_green">+123456</span> </a>
-                            <a href="/faq.html" class="hide_mobile">FAQ</a>
+                            <a href="/faq.html" class="class="hide_mobile"">FAQ</a>
                             <a href="/faq.html" class="hide_mobile">Download App</a>
                             <a href="/faq.html" class="">Business owner</a>
                             <a href="#" class="search-icon" onclick="toggle('search-filter');"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -110,8 +92,8 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li class="active"><a href="product.html">Products & shops</a></li>
-                                            <li><a href="about_card.html">About SUDC card</a></li>
+                                            <li class="active"><a href="index.html">Products & shops</a></li>
+                                            <li><a href="aboutsudc.html">About SUDC card</a></li>
                                             <li><a href="Membership.html">Membership</a></li>
                                             <li class="dropdown">
                                                 <a href="login.html" class="dropdown-toggle login_reg" id="submenuhead" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -139,40 +121,39 @@
 
         <section class="menu_other_pages">
             <div class="container">
-                <div class="row">
-                    <!-- search section comes here -->
-                    <div class="search-sec">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-                                    <div class="row">
-                                        <div class="form-section">
-                                            <form action="#" method="post" class="form-inline">
-                                                <!--<div class="col-lg-12">-->
-                                                <!--<div class="row">-->
-                                                <!-- <ul class="list-group horizontal main_search">-->
-                                                <div class="col-md-5 col-sm-12 col-xs-12">
-                                                    <div class="form-group looking">
-                                                        <label for="search">I'm looking for</label>
-                                                        <input type="text" class="form-control no-border" id="search" placeholder="Restaurants . . . ">
+
+                <!-- search section comes here -->
+                <div class="search-sec">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="row">
+                                    <div class="form-section">
+                                        <form action="#" method="post" class="form-inline">
+                                            <!--<div class="col-lg-12">-->
+                                            <!--<div class="row">-->
+                                            <!-- <ul class="list-group horizontal main_search">-->
+                                            <div class="col-md-5 col-sm-12 col-xs-12">
+                                                <div class="form-group looking">
+                                                    <label for="search">I'm looking for</label>
+                                                    <input type="text" class="form-control no-border" id="search" placeholder="Restaurants . . . ">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-5 col-sm-12 col-xs-10">
+                                                <div class="form-group where_in">
+                                                    <label for="search">Show me where in</label>
+                                                    <div class="input-group">
+                                                        <input type="text" class="form-control no-border" id="city" placeholder="T.Nagar, Chennai">
+                                                        <span class="input-group-addon"><a href=""><i class="fas fa-map-marker-alt"></i></a></span>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-5 col-sm-12 col-xs-12">
-                                                    <div class="form-group where_in">
-                                                        <label for="search">Show me where in</label>
-                                                        <div class="input-group">
-                                                            <input type="text" class="form-control no-border" id="city" placeholder="T.Nagar, Chennai">
-                                                            <span class="input-group-addon"><a href=""><i class="fas fa-map-marker-alt"></i></a></span>
-                                                        </div>
-                                                    </div>
+                                            </div>
+                                            <div class="col-md-2 col-sm-12 col-xs-2 submit_col">
+                                                <div class="form-group sub_but">
+                                                    <button type="submit" class="btn"><span>Find Me Shop</span></button>
                                                 </div>
-                                                <div class="col-md-2 col-sm-12 col-xs-6">
-                                                    <div class="form-group sub_but">
-                                                        <button type="submit" class="btn">Find me shop</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
