--- a/customerbenfits.html
+++ b/customerbenfits.html
@@ -131,7 +131,7 @@
 
 
         <!-- About the card -->
-        <section class="about_the_card no-padding">
+        <section class="about_the_card testimonial no-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
