--- a/customerbenfits.html
+++ b/customerbenfits.html
@@ -287,6 +287,9 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <script>
+          scrollToActiveSubmenu();
+        </script>
     </body>
 
 </html>
