--- a/membership.html
+++ b/membership.html
@@ -286,6 +286,9 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <script>
+          scrollToActiveSubmenu();
+        </script>
     </body>
 
 </html>
