--- a/how_it_works.html
+++ b/how_it_works.html
@@ -264,6 +264,9 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <script>
+          scrollToActiveSubmenu();
+        </script>
     </body>
 
 </html>
