--- a/testimonial.html
+++ b/testimonial.html
@@ -314,6 +314,9 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <script>
+          scrollToActiveSubmenu();
+        </script>
     </body>
 
 </html>
