--- a/about_card.html
+++ b/about_card.html
@@ -463,6 +463,9 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <script>
+          scrollToActiveSubmenu();
+        </script>
     </body>
 
 </html>
