--- a/index.html
+++ b/index.html
@@ -1786,20 +1786,11 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6 footer_height">
                         <img src="images/footer_logo.png" alt="" class="img-responsive" />
-                        <div class="row got_question">
-                            <div class="col-md-3 col-sm-3 col-xs-3">
-                                <img src="images/Call%20icon.png" alt="" height="400" class="img-responsive" />
-                            </div>
-                            <div class="col-md-9 col-sm-9 col-xs-9">
-                                <p>Have got question? Call us 24/7.</p>
-                                <h3>97914-73952</h3>
-                            </div>
-                        </div>
                         <div class="row contact_info">
                             <div class="col-md-12 col-sm-12">
-                                <h4>Contact info</h4>
-                                <p>29, Mannar street, Chennai - 600017</p>
-
+                                <p class="address"><i class="fas fa-map-marker-alt"></i>29, Mannar street, Chennai - 600017</p>
+                                <p class="phone"><i class="fas fa-phone"></i>+123 4567 8901</p>
+                                <p class="email"><i class="fas fa-map-marker-alt"></i>support@sudc.com</p>
                             </div>
                         </div>
                         <div class="row social_icons">
