--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-md-9 col-sm-9">
                         <div class="top_header text-right hide_mobile">
                             <a href="/phone.html">Customer care : <span class="ph_green">+123 4567 8901</span> </a>
-                            <a href="/faq.html" class="class="hide_mobile"">FAQ</a>
+                            <a href="/faq.html" class="hide_mobile">FAQ</a>
                             <a href="/faq.html" class="hide_mobile">Download App</a>
                             <a href="/faq.html" class="">Business owner</a>
                             <div class="nav-search">
