--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/common.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
+
     </head>
 
     <body>
@@ -1858,5 +1860,19 @@
         </footer>
         <div class="upar"></div>
     </body>
+    <script>
+        var data = 
+            [{"id":"222","name":"sneha","employee_salary":"100000","employee_age":"23"},{"id":"223","name":"arpita","employee_salary":"40000","employee_age":"33"},{"id":"225","name":"pogi","employee_salary":"5646545","employee_age":"546"},{"id":"229","name":"eer","employee_salary":"0","employee_age":"0"},{"id":"232","name":"sdfadf","employee_salary":"0","employee_age":"0"},{"id":"234","name":"dfgdgd","employee_salary":"45","employee_age":"21"},{"id":"236","name":"nb","employee_salary":"0","employee_age":"0"},{"id":"237","name":"BHsdgygbfvr1bn","employee_salary":"0","employee_age":"0"},{"id":"238","name":"BHsdgygbfvr1bn","employee_salary":"0","employee_age":"0"},{"id":"239","name":"assa","employee_salary":"0","employee_age":"0"}];
 
+
+        var $input = $("#search");
+        $input.typeahead({
+            source: data,
+            autoSelect: true
+        });
+        $.get("/getEmployee", function(data){
+            $("#name").typeahead({ source:data });
+        },'json');
+
+    </script>
 </html>
