--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                                         <p class="signup-policy">By Signing up you will agree Privacy Policy and Terms of Conditions.</p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="submit" class="btn btn-block btn-primary" value="Login" />
+                                        <input type="submit" class="btn btn-block btn-primary" value="SIGN UP" />
                                     </div>
                                 </div>
                                 <span class="border-or">OR</span>
-                                <div class="col-sm-6 col-xs-12 signup-other mx-auto" >
+                                <div class="col-md-6 col-sm-12 col-xs-12 signup-other mx-auto" >
                                     <div class="div-center-align">
-                                        <a href="" class="btn btn-other signup-g btn-block"><i class="fab fa-google"></i> sign in with google</a>
-                                        <a href="" class="btn btn-other signup-fb btn-block"><i class="fab fa-facebook-f"></i> sign in with facebook</a>
+                                        <a href="" class="btn btn-other signup-g btn-block"><i class="fab fa-google"></i> Sign in with google</a>
+                                        <a href="" class="btn btn-other signup-fb btn-block"><i class="fab fa-facebook-f"></i> Sign in with facebook</a>
                                     </div>
                                 </div>
                             </div>
@@ -205,10 +205,10 @@
                                     <!--forgot -->
                                     <a href="#" class="btn-forgot" onclick="openForgotPassword();">forgot password ?</a>
                                     <div class="form-group">
-                                        <input type="submit" class="btn btn-block btn-primary" value="Login" />
+                                        <input type="submit" class="btn btn-block btn-primary" value="LOGIN" />
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-xs-12 retrieve-password login-modal" id="forgetModel" style="display: none;">
+                                <div class="col-md-6 col-xs-12 retrieve-password login-modal" id="forgetModel" style="display: none;">
                                     <h4 class="text-uppercase">Forgot Password?</h4>
                                     <p>Enter your email address and we will send you a link to reset your password.</p>
                                     <form method="POST" id="form-forget-password" action="">
@@ -221,7 +221,7 @@
                                     </form>
                                 </div>
                                 <span class="border-or">OR</span>
-                                <div class="col-sm-6 col-xs-12 signup-other mx-auto" >
+                                <div class="col-md-6 col-sm-12 col-xs-12 signup-other mx-auto" >
                                     <div class="div-center-align">
                                         <a href="" class="btn btn-other signup-g btn-block"><i class="fab fa-google"></i> sign in with google</a>
                                         <a href="" class="btn btn-other signup-fb btn-block"><i class="fab fa-facebook-f"></i> sign in with facebook</a>
