--- a/product.html
+++ b/product.html
@@ -166,7 +166,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <img src="images/map.jpg" class="img-responsive" alt="Responsive image">
+                <img src="images/map.png" class="img-responsive" alt="Responsive image">
             </div>
         </div>
         <div class="container">
