--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/Trendy-1.jpg" class="img-responsive" alt="">
+                                                <img src="images/deals-7.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -704,7 +704,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                <img src="images/deals-8.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -726,7 +726,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/Trendy-3.jpg" class="img-responsive" alt="">
+                                                <img src="images/deals-9.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -747,29 +747,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
-                                            </div>		
-                                        </a>		
-                                    </figure>	
-                                </div>
-
-                                <div class="description">
-                                    <div class="block">
-                                        <span>4.3<i class="fa fa-star checked"></i></span>
-                                    </div>
-                                    <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
-                            <div class="grid-arr">
-                                <div class="grid-arrival">
-                                    <figure>		
-                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                            <div class="grid-img">
-                                                <img src="images/Trendy-5.jpg" class="img-responsive" alt="">
+                                                <img src="images/deals-10.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -791,7 +769,29 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/Trendy-6.jpg" class="img-responsive" alt="">
+                                                <img src="images/deals-11.jpg" class="img-responsive" alt="">
+                                            </div>		
+                                        </a>		
+                                    </figure>	
+                                </div>
+
+                                <div class="description">
+                                    <div class="block">
+                                        <span>4.3<i class="fa fa-star checked"></i></span>
+                                    </div>
+                                    <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
+                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
+                            <div class="grid-arr">
+                                <div class="grid-arrival">
+                                    <figure>		
+                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                            <div class="grid-img">
+                                                <img src="images/deals-12.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
